[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/Dialog/ConditionPanel.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.14902, 0.14902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.941176, 0.933333, 0.733333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.113725, 0.00392157, 0.00392157, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/minus_button_normal.png-4f9f1e8b41d0d24f1d3744d42b5fd737.stex"

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/minus_button_over.png-4d3ce244577877d5ba95f756758dc7c0.stex"

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/minus_button_disabled.png-9fe49bacdb4c07b68a09f314a71aef68.stex"

[sub_resource type="ButtonGroup" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.941176, 0.933333, 0.733333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.113725, 0.00392157, 0.00392157, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ConditionPanel" type="Panel"]
margin_right = 321.0
margin_bottom = 167.0
rect_min_size = Vector2( 321, 167 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -3.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 311.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 275.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="ExtraConditionContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 275.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/ExtraConditionContainer"]
margin_top = 3.0
margin_right = 117.0
margin_bottom = 17.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "Append condition:"
__meta__ = {
"_editor_description_": ""
}

[node name="ExtraCondition" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/ExtraConditionContainer"]
margin_left = 121.0
margin_right = 275.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "AND"
items = [ "AND", null, false, 0, null, "OR", null, false, 1, null ]
selected = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 275.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.176471, 0.956863, 0.113725, 1 )
text = "Variable:"
__meta__ = {
"_editor_description_": ""
}

[node name="variable_c1" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 275.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
hint_tooltip = "Click to select a variable"
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/read_only = SubResource( 2 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
align = 1
editable = false
placeholder_text = "Click to select variable..."
caret_blink = true

[node name="deleteButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 279.0
margin_right = 311.0
margin_bottom = 32.0
hint_tooltip = "Delete the language selected.

([color=red]careful!!!![/color] it delete the language file in your harddisk)"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
texture_normal = SubResource( 3 )
texture_hover = SubResource( 4 )
texture_disabled = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 311.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 20.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "is"
__meta__ = {
"_editor_description_": ""
}

[node name="variable_c2" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 24.0
margin_right = 311.0
margin_bottom = 20.0
hint_tooltip = "Condition that the selected variable must meet"
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
disabled = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 311.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="checkbox_c1" type="CheckBox" parent="VBoxContainer/HBoxContainer3"]
margin_right = 78.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
disabled = true
pressed = true
group = SubResource( 6 )
text = "variable"

[node name="variable_c3" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
modulate = Color( 0.411765, 0.403922, 0.403922, 0.231373 )
margin_left = 82.0
margin_right = 311.0
margin_bottom = 24.0
hint_tooltip = "Click to select a variable"
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/read_only = SubResource( 7 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
align = 1
editable = false
placeholder_text = "Click to select variable..."
caret_blink = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 311.0
margin_bottom = 112.0
size_flags_horizontal = 3

[node name="checkbox_c2" type="CheckBox" parent="VBoxContainer/HBoxContainer4"]
margin_right = 62.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
disabled = true
group = SubResource( 6 )
text = "value"

[node name="value_container" type="HBoxContainer" parent="VBoxContainer/HBoxContainer4"]
margin_left = 66.0
margin_right = 311.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="button_down" from="VBoxContainer/HBoxContainer/deleteButton" to="." method="_on_deleteButton_button_down"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer3/checkbox_c1" to="." method="_on_checkbox_c1_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer4/checkbox_c2" to="." method="_on_checkbox_c2_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
